# micro-dlc

./: .gitignore  CMakeLists.txt
include/codegen/: codegen.h
include/ir/: graph.h
include/optimizer/: optimizer.h
include/simulator/: simulator.h
src/: main.cpp
src/codegen/: codegen.cpp
src/ir/: graph.cpp
src/optimizer/: optimizer.cpp
src/simulator/: simulator.cpp
